# only-thread-logic-42326

./: .env.example  .gitignore  INTEGRATION.md  LICENSE  MULTI_SNS_INTEGRATION.md  README.md  SPEC.md  golden_vectors.json  program.md  pyproject.toml
docs/: AUDIT.md  FORMULA_MASTER.md  explosion_logic.md
examples/: basic_usage.py
scripts/: gen_golden_vectors.py
sotda/: __init__.py  evaluator.py  formulas.py  generator.py  optimizer.py  pipeline.py
tests/: conftest.py  test_evaluator.py  test_formula_triage.py  test_formulas.py  test_pipeline.py
typescript/: package.json  tsconfig.json
typescript/src/: formulas.ts
typescript/test/: verify_golden.mjs
